--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
+
     <head>
         <title>test</title>
     </head>
+
     <body>
+        <p>
+            goodbye, world
+        </p>
         <p>
             test text, just so i can see something
         </p>
     </body>
+
 </html>
